@@ -1,11 +1,11 @@
-#ifndef PDSCALIBDATA_CSPADBASEV2_H
-#define PDSCALIBDATA_CSPADBASEV2_H
+#ifndef PDSCALIBDATA_OPAL4000BASEV1_H
+#define PDSCALIBDATA_OPAL4000BASEV1_H
 
 //------------------------------------------------------------------------
 // File and Version Information:
 //      $Revision$
 //      $Id$
-//      $HeadURL: https://pswww.slac.stanford.edu/svn/psdmrepo/pdscalibdata/trunk/include/CsPadBaseV2.h $
+//      $HeadURL$
 //      $Date$
 //
 // Author: Mikhail Dubrovin
@@ -28,7 +28,7 @@
 namespace pdscalibdata {
 
 /**
- *  class CsPadBaseV2 contains common parameters and methods for CSPAD camera. 
+ *  class Opal4000BaseV1 contains common parameters and methods for Andor camera. 
  *
  *  This software was developed for the LCLS project.  
  *  If you use all or part of it, please give an appropriate acknowledgment.
@@ -38,31 +38,28 @@ namespace pdscalibdata {
  *  @author Mikhail Dubrovin
  */
 
-class CsPadBaseV2 {
+class Opal4000BaseV1 {
 public:
 
   typedef unsigned 	shape_t;
   typedef double  	cmod_t;
 
-  const static size_t   Ndim = 4; 
-  const static size_t   Quads= 4; 
-  const static size_t   Segs = 8; 
-  const static size_t   Rows = 185; 
-  const static size_t   Cols = 388; 
-  const static size_t   Size = Quads*Segs*Rows*Cols; 
-  const static size_t   SizeCM = 4; 
-  
- 
+  const static size_t   Ndim = 2; 
+  const static size_t   Rows = 1200; 
+  const static size_t   Cols = 1100; 
+  const static size_t   Size = Rows*Cols; 
+  const static size_t   SizeCM = 7; 
+
   const shape_t* shape_base() { return &m_shape[0]; }
   const cmod_t*  cmod_base()  { return &m_cmod[0]; }
 
-  ~CsPadBaseV2 () {};
+  ~Opal4000BaseV1 () {};
 
 protected:
 
-  CsPadBaseV2 (){ 
-    shape_t shape[Ndim]={Quads,Segs,Rows,Cols};            
-    cmod_t cmod[SizeCM]={1, 25, 25, 100}; // use algorithm 1 to entire image
+  Opal4000BaseV1 (){ 
+    shape_t shape[Ndim]={Rows,Cols};            
+    cmod_t cmod[SizeCM]={1,50,50,100,1,Size,1}; // use algorithm 1 to entire image
     std::memcpy(m_shape, &shape[0], sizeof(shape_t)*Ndim);
     std::memcpy(m_cmod,  &cmod[0],  sizeof(cmod_t)*SizeCM);
   };
@@ -74,4 +71,4 @@ private:
 
 } // namespace pdscalibdata
 
-#endif // PDSCALIBDATA_CSPADBASEV2_H
+#endif // PDSCALIBDATA_OPAL4000BASEV1_H
